# shadowsocksr-client-linux

./: README.md  build.sh  package-lock.json  package.json
src/: App.vue  i18n.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  proxy.rs
src/components/: ConfigForm.vue  ConfigList.vue  ProxyControl.vue
src/locales/: en-US.js  ja-JP.js  ko-KR.js  ru-RU.js  zh-CN.js  zh-HK.js  zh-TW.js
